--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 .AppleDouble
 .LSOverride
 
+#env
+.env
+.env.test
+.env.production
+
 # Icon must end with two \r
 Icon
 
@@ -235,7 +240,6 @@ bh_unicode_properties.cache
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
 
-#env
-.env
+
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,python,sublimetext
