--- a/.gitignore
+++ b/.gitignore
@@ -248,4 +248,6 @@ bh_unicode_properties.cache
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
 
-# End of https://www.toptal.com/developers/gitignore/api/osx,python,jupyternotebooks,sublimetext,dotenv
+# End of https://www.toptal.com/developers/gitignore/api/osx,python,jupyternotebooks,sublimetext,dotenvsendgrid.env
+sendgrid.env
+sendgrid.env
