--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,4 @@ GitHub.sublime-settings
 # End of https://www.toptal.com/developers/gitignore/api/osx,python,jupyternotebooks,sublimetext,dotenvsendgrid.env
 sendgrid.env
 sendgrid.env
+sendgrid.env
