--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -35,8 +35,11 @@ jobs:
     - name: Install a new Chromium
       run: sudo apt install -y chromium-browser 
     - name: Install all necessary packages
-      run: pip install pandas requests beautifulsoup4 html5lib sendgrid webdriver-manager selenium
+      run: pip install pandas requests beautifulsoup4 python-dotenv html5lib sendgrid webdriver-manager selenium
     - name: Scraping today's data
+      #env:
+        #SG_KEY: ${{ SG_KEY}}
+        #ADDRESS: ${{ ADDRESS}}
       run: python scraper.py
     - name: Commit and push any changes
       run: |-
