--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -37,9 +37,9 @@ jobs:
     - name: Install all necessary packages
       run: pip install pandas requests beautifulsoup4 python-dotenv html5lib sendgrid webdriver-manager selenium
     - name: Scraping today's data
-      #env:
-        #SG_KEY: ${{ SG_KEY}}
-        #ADDRESS: ${{ ADDRESS}}
+      env:
+        SG_KEY: ${{SG_KEY}}
+        ADDRESS: ${{ADDRESS}}
       run: python scraper.py
     - name: Commit and push any changes
       run: |-
