--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -30,12 +30,8 @@ jobs:
       run: apt list --installed
     - name: Remove Chrome
       run: sudo apt purge google-chrome-stable
-    - name: Remove default Chromium
-      run: sudo apt purge chromium-browser
-    - name: Install a new Chromium
-      run: sudo apt install -y chromium-browser 
     - name: Install all necessary packages
-      run: pip install pandas requests beautifulsoup4 python-dotenv html5lib sendgrid webdriver-manager selenium
+      run: pip install chromedriver-autoinstaller pandas requests beautifulsoup4 python-dotenv html5lib sendgrid webdriver-manager selenium
     - name: Scraping today's data
       env:
         API_KEY: ${{ secrets.API_KEY }}
